--- a/Simple CRUD API to MySQL/crudapi.yaml
+++ b/Simple CRUD API to MySQL/crudapi.yaml
@@ -42,8 +42,8 @@ kind: Ingress
 metadata:
   name: node-crud-api-ingress
   annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    cert-manager.io/cluster-issuer: letsencrypt
+    acme.cert-manager.io/http01-edit-in-place: "true"
 spec:
   tls:
   - hosts:
