--- a/OpenSID/Dockerfile
+++ b/OpenSID/Dockerfile
@@ -29,6 +29,7 @@ RUN apt-get update && \
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
+COPY opensid /var/www/html
 COPY apache.conf /etc/apache2/sites-available/000-default.conf
 
 # Enable mod_rewrite and mod_headers modules
